--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,16 @@
 PORT=3000
 NODE_ENV=development
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=24h
+# MySQL Database Configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=blog_db
+
+# Session Configuration
+SESSION_SECRET=your-super-secret-session-key-change-this-in-production
+SESSION_MAX_AGE=86400000
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
