--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
   "dependencies": {
     "express": "^4.18.2",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "mysql2": "^3.6.5",
+    "typeorm": "^0.3.19",
+    "reflect-metadata": "^0.1.14",
+    "express-session": "^1.17.3",
+    "express-mysql-session": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/express": "^4.17.21",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
     "@types/uuid": "^9.0.7",
+    "@types/express-session": "^1.17.10",
     "typescript": "^5.3.3",
     "ts-node": "^10.9.2",
     "nodemon": "^3.0.2",
